# COGL

./: CMakeLists.txt
include/: indexBuffer.h  renderer.h  vertexBuffer.h
src/: indexBuffer.cpp  renderer.cpp  vertexBuffer.cpp
tests/: ogltest.cpp
